Renaming ins_product.item_desc-complementary_data_def with offered.item.description-extra_data

--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -1590,39 +1590,39 @@ msgid "Write User"
 msgstr "Mis à jour par"
 
 msgctxt ""
-"field:ins_product.item_desc-complementary_data_def,complementary_data_def:"
+"field:offered.item.description-extra_data,complementary_data_def:"
 msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,create_date:"
+msgctxt "field:offered.item.description-extra_data,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,create_date_:"
+msgctxt "field:offered.item.description-extra_data,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,create_uid:"
+msgctxt "field:offered.item.description-extra_data,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,id:"
+msgctxt "field:offered.item.description-extra_data,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,item_desc:"
+msgctxt "field:offered.item.description-extra_data,item_desc:"
 msgid "Item Desc"
 msgstr "Desc Risque"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,rec_name:"
+msgctxt "field:offered.item.description-extra_data,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,write_date:"
+msgctxt "field:offered.item.description-extra_data,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.item_desc-complementary_data_def,write_uid:"
+msgctxt "field:offered.item.description-extra_data,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3369,7 +3369,7 @@ msgctxt "model:offered.item.description,name:"
 msgid "Item Descriptor"
 msgstr "Description du Risque"
 
-msgctxt "model:ins_product.item_desc-complementary_data_def,name:"
+msgctxt "model:offered.item.description-extra_data,name:"
 msgid "Relation between Item Descriptor and Complementary Data"
 msgstr "Relation Risque - Données Complémentaires"
 
