Renaming ins_product.rule_sets.covered_data with rule_engine.runtime

--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -2283,11 +2283,11 @@ msgctxt "field:ins_product.rule_sets.contract,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.rule_sets.covered_data,id:"
+msgctxt "field:rule_engine.runtime,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.rule_sets.covered_data,must_expand_tree:"
+msgctxt "field:rule_engine.runtime,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
@@ -3433,7 +3433,7 @@ msgctxt "model:ins_product.rule_sets.contract,name:"
 msgid "Context functions for contract related data"
 msgstr ""
 
-msgctxt "model:ins_product.rule_sets.covered_data,name:"
+msgctxt "model:rule_engine.runtime,name:"
 msgid "Context functions for Coverage-Covered associations objects"
 msgstr ""
 
