Renaming ins_product.rule_sets.person with rule_engine.runtime

--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -2299,11 +2299,11 @@ msgctxt "field:rule_engine.runtime,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.rule_sets.person,id:"
+msgctxt "field:rule_engine.runtime,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.rule_sets.person,must_expand_tree:"
+msgctxt "field:rule_engine.runtime,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
@@ -3441,7 +3441,7 @@ msgctxt "model:rule_engine.runtime,name:"
 msgid "Context functions for option related data"
 msgstr ""
 
-msgctxt "model:ins_product.rule_sets.person,name:"
+msgctxt "model:rule_engine.runtime,name:"
 msgid "Context functions for Persons."
 msgstr ""
 
