--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -319,19 +319,19 @@ msgctxt "field:billing.premium_rate.form.receive.create_move,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:billing.rate_note_process_parameter-client,client:"
+msgctxt "field:billing.premium_rate.form.create.param-client,client:"
 msgid "Client"
 msgstr "Client"
 
-msgctxt "field:billing.rate_note_process_parameter-client,id:"
+msgctxt "field:billing.premium_rate.form.create.param-client,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:billing.rate_note_process_parameter-client,must_expand_tree:"
+msgctxt "field:billing.premium_rate.form.create.param-client,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:billing.rate_note_process_parameter-client,parameters_view:"
+msgctxt "field:billing.premium_rate.form.create.param-client,parameters_view:"
 msgid "Parameter View"
 msgstr "Paramètres"
 
@@ -805,7 +805,7 @@ msgctxt "model:billing.premium_rate.form.receive.create_move,name:"
 msgid "Rate Note Move Displayer"
 msgstr "Réception du bordereau"
 
-msgctxt "model:billing.rate_note_process_parameter-client,name:"
+msgctxt "model:billing.premium_rate.form.create.param-client,name:"
 msgid "Rate Note Parameter Client Relation"
 msgstr "Relation Bordereau Client"
 
