--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -413,15 +413,15 @@ msgctxt "field:billing.premium_rate.form.create.param,until_date:"
 msgid "Until Date"
 msgstr "Jusqu'à la Date"
 
-msgctxt "field:billing.rate_note_selection,id:"
+msgctxt "field:billing.premium_rate.form.receive.select,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:billing.rate_note_selection,must_expand_tree:"
+msgctxt "field:billing.premium_rate.form.receive.select,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:billing.rate_note_selection,selected_note:"
+msgctxt "field:billing.premium_rate.form.receive.select,selected_note:"
 msgid "Selected Note"
 msgstr "Bordereau sélectionné"
 
@@ -825,7 +825,7 @@ msgctxt "model:billing.premium_rate.form.create.param,name:"
 msgid "Rate Note Parameters"
 msgstr "Paramètres de Recherche"
 
-msgctxt "model:billing.rate_note_selection,name:"
+msgctxt "model:billing.premium_rate.form.receive.select,name:"
 msgid "Rate Note Selection"
 msgstr "Sélection du bordereau"
 
@@ -1013,7 +1013,7 @@ msgctxt "view:billing.premium_rate.form.create.param:"
 msgid "Rate Note Process Parameters"
 msgstr "Paramètres de Recherche"
 
-msgctxt "view:billing.rate_note_selection:"
+msgctxt "view:billing.premium_rate.form.receive.select:"
 msgid "Rate Note Selection"
 msgstr "Sélection du bordereau"
 
