--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -385,31 +385,31 @@ msgctxt "field:billing.premium_rate.form.create.param-product,product:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "field:billing.rate_note_process_parameters,clients:"
+msgctxt "field:billing.premium_rate.form.create.param,clients:"
 msgid "Clients"
 msgstr "Clients"
 
-msgctxt "field:billing.rate_note_process_parameters,contracts:"
+msgctxt "field:billing.premium_rate.form.create.param,contracts:"
 msgid "Contracts"
 msgstr "Contrats"
 
-msgctxt "field:billing.rate_note_process_parameters,group_clients:"
+msgctxt "field:billing.premium_rate.form.create.param,group_clients:"
 msgid "Group Clients"
 msgstr "Regroupement de Sociétés"
 
-msgctxt "field:billing.rate_note_process_parameters,id:"
+msgctxt "field:billing.premium_rate.form.create.param,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:billing.rate_note_process_parameters,must_expand_tree:"
+msgctxt "field:billing.premium_rate.form.create.param,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:billing.rate_note_process_parameters,products:"
+msgctxt "field:billing.premium_rate.form.create.param,products:"
 msgid "Products"
 msgstr "Produits"
 
-msgctxt "field:billing.rate_note_process_parameters,until_date:"
+msgctxt "field:billing.premium_rate.form.create.param,until_date:"
 msgid "Until Date"
 msgstr "Jusqu'à la Date"
 
@@ -821,7 +821,7 @@ msgctxt "model:billing.premium_rate.form.create.param-product,name:"
 msgid "Rate Note Parameter Product Relation"
 msgstr "Relation Bordereau Produit"
 
-msgctxt "model:billing.rate_note_process_parameters,name:"
+msgctxt "model:billing.premium_rate.form.create.param,name:"
 msgid "Rate Note Parameters"
 msgstr "Paramètres de Recherche"
 
@@ -1009,7 +1009,7 @@ msgctxt "view:billing.premium_rate.form.receive.create_move:"
 msgid "Move"
 msgstr "Mouvement"
 
-msgctxt "view:billing.rate_note_process_parameters:"
+msgctxt "view:billing.premium_rate.form.create.param:"
 msgid "Rate Note Process Parameters"
 msgstr "Paramètres de Recherche"
 
