--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -477,47 +477,47 @@ msgctxt "field:fare_class,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:collective.fare_class_group,code:"
+msgctxt "field:fare_class.group,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:collective.fare_class_group,create_date:"
+msgctxt "field:fare_class.group,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:collective.fare_class_group,create_date_:"
+msgctxt "field:fare_class.group,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:collective.fare_class_group,create_uid:"
+msgctxt "field:fare_class.group,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:collective.fare_class_group,fare_classes:"
+msgctxt "field:fare_class.group,fare_classes:"
 msgid "Fare Classes"
 msgstr "Classe Tarif"
 
-msgctxt "field:collective.fare_class_group,id:"
+msgctxt "field:fare_class.group,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collective.fare_class_group,must_expand_tree:"
+msgctxt "field:fare_class.group,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:collective.fare_class_group,name:"
+msgctxt "field:fare_class.group,name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:collective.fare_class_group,rec_name:"
+msgctxt "field:fare_class.group,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:collective.fare_class_group,write_date:"
+msgctxt "field:fare_class.group,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:collective.fare_class_group,write_uid:"
+msgctxt "field:fare_class.group,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -837,7 +837,7 @@ msgctxt "model:fare_class,name:"
 msgid "Fare Class"
 msgstr "Classe Tarif"
 
-msgctxt "model:collective.fare_class_group,name:"
+msgctxt "model:fare_class.group,name:"
 msgid "Fare Class Group"
 msgstr "Cotisation Groupe de Tarif"
 
@@ -1025,7 +1025,7 @@ msgctxt "view:fare_class:"
 msgid "Fare Class"
 msgstr "Classe Tarif"
 
-msgctxt "view:collective.fare_class_group:"
+msgctxt "view:fare_class.group:"
 msgid "Fare Class Group"
 msgstr "Cotisation Groupe de Tarif"
 
