--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -521,39 +521,39 @@ msgctxt "field:fare_class.group,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:collective.fare_class_group-fare_class,create_date:"
+msgctxt "field:fare_class.group-fare_class,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:collective.fare_class_group-fare_class,create_date_:"
+msgctxt "field:fare_class.group-fare_class,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:collective.fare_class_group-fare_class,create_uid:"
+msgctxt "field:fare_class.group-fare_class,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:collective.fare_class_group-fare_class,fare_class:"
+msgctxt "field:fare_class.group-fare_class,fare_class:"
 msgid "Fare Class"
 msgstr "Classe Tarif"
 
-msgctxt "field:collective.fare_class_group-fare_class,group:"
+msgctxt "field:fare_class.group-fare_class,group:"
 msgid "Group"
 msgstr "Groupe"
 
-msgctxt "field:collective.fare_class_group-fare_class,id:"
+msgctxt "field:fare_class.group-fare_class,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collective.fare_class_group-fare_class,rec_name:"
+msgctxt "field:fare_class.group-fare_class,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:collective.fare_class_group-fare_class,write_date:"
+msgctxt "field:fare_class.group-fare_class,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:collective.fare_class_group-fare_class,write_uid:"
+msgctxt "field:fare_class.group-fare_class,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -841,7 +841,7 @@ msgctxt "model:fare_class.group,name:"
 msgid "Fare Class Group"
 msgstr "Cotisation Groupe de Tarif"
 
-msgctxt "model:collective.fare_class_group-fare_class,name:"
+msgctxt "model:fare_class.group-fare_class,name:"
 msgid "Relation between fare class group and fare class"
 msgstr ""
 
