--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -11,7 +11,7 @@ msgid "Selected Rate Note is not in a valid status to start reception process"
 msgstr ""
 "Le statut du bordereau ne permet pas de démarrer le processus de réception"
 
-msgctxt "error:collective.rating_rule:"
+msgctxt "error:billing.premium.rate.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -557,83 +557,83 @@ msgctxt "field:fare_class.group-fare_class,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:collective.rating_rule,config_kind:"
+msgctxt "field:billing.premium.rate.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:collective.rating_rule,create_date:"
+msgctxt "field:billing.premium.rate.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:collective.rating_rule,create_date_:"
+msgctxt "field:billing.premium.rate.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:collective.rating_rule,create_uid:"
+msgctxt "field:billing.premium.rate.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:collective.rating_rule,end_date:"
+msgctxt "field:billing.premium.rate.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:collective.rating_rule,id:"
+msgctxt "field:billing.premium.rate.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collective.rating_rule,index:"
+msgctxt "field:billing.premium.rate.rule,index:"
 msgid "Index"
 msgstr "indice"
 
-msgctxt "field:collective.rating_rule,must_expand_tree:"
+msgctxt "field:billing.premium.rate.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:collective.rating_rule,offered:"
+msgctxt "field:billing.premium.rate.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:collective.rating_rule,rating_kind:"
+msgctxt "field:billing.premium.rate.rule,rating_kind:"
 msgid "Rating Kind"
 msgstr "Type de Tarif"
 
-msgctxt "field:collective.rating_rule,rec_name:"
+msgctxt "field:billing.premium.rate.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:collective.rating_rule,rule:"
+msgctxt "field:billing.premium.rate.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:collective.rating_rule,rule_complementary_data:"
+msgctxt "field:billing.premium.rate.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:collective.rating_rule,start_date:"
+msgctxt "field:billing.premium.rate.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:collective.rating_rule,sub_rating_rules:"
+msgctxt "field:billing.premium.rate.rule,sub_rating_rules:"
 msgid "Sub Rating Rules"
 msgstr ""
 
-msgctxt "field:collective.rating_rule,template:"
+msgctxt "field:billing.premium.rate.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:collective.rating_rule,template_behaviour:"
+msgctxt "field:billing.premium.rate.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:collective.rating_rule,view_rec_name:"
+msgctxt "field:billing.premium.rate.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:collective.rating_rule,write_date:"
+msgctxt "field:billing.premium.rate.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:collective.rating_rule,write_uid:"
+msgctxt "field:billing.premium.rate.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -845,7 +845,7 @@ msgctxt "model:fare_class.group-fare_class,name:"
 msgid "Relation between fare class group and fare class"
 msgstr ""
 
-msgctxt "model:collective.rating_rule,name:"
+msgctxt "model:billing.premium.rate.rule,name:"
 msgid "Collective Rating Rule"
 msgstr "Règle de Tarification Collective"
 
@@ -929,43 +929,43 @@ msgctxt "selection:billing.premium_rate.form,status:"
 msgid "Validated"
 msgstr "Validé"
 
-msgctxt "selection:collective.rating_rule,config_kind:"
+msgctxt "selection:billing.premium.rate.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:collective.rating_rule,config_kind:"
+msgctxt "selection:billing.premium.rate.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:collective.rating_rule,offered:"
+msgctxt "selection:billing.premium.rate.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:collective.rating_rule,offered:"
+msgctxt "selection:billing.premium.rate.rule,offered:"
 msgid "Coverage"
 msgstr "Offre"
 
-msgctxt "selection:collective.rating_rule,offered:"
+msgctxt "selection:billing.premium.rate.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:collective.rating_rule,rating_kind:"
+msgctxt "selection:billing.premium.rate.rule,rating_kind:"
 msgid "by Fare Class"
 msgstr "par Classe Tarifaire"
 
-msgctxt "selection:collective.rating_rule,rating_kind:"
+msgctxt "selection:billing.premium.rate.rule,rating_kind:"
 msgid "by Tranche"
 msgstr "Par Tranche"
 
-msgctxt "selection:collective.rating_rule,template_behaviour:"
+msgctxt "selection:billing.premium.rate.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:collective.rating_rule,template_behaviour:"
+msgctxt "selection:billing.premium.rate.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:collective.rating_rule,template_behaviour:"
+msgctxt "selection:billing.premium.rate.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -1029,7 +1029,7 @@ msgctxt "view:fare_class.group:"
 msgid "Fare Class Group"
 msgstr "Cotisation Groupe de Tarif"
 
-msgctxt "view:collective.rating_rule:"
+msgctxt "view:billing.premium.rate.rule:"
 msgid "Collective Rating Rule"
 msgstr "Règle de Tarification Collective"
 
